--- a/pinot-segment-spi/pom.xml
+++ b/pinot-segment-spi/pom.xml
@@ -60,7 +60,7 @@
             <onlyModified>true</onlyModified>
             <skipXmlReport>true</skipXmlReport>
             <skipHtmlReport>true</skipHtmlReport>
-            <breakBuildOnSourceIncompatibleModifications>true</breakBuildOnSourceIncompatibleModifications>
+            <breakBuildOnSourceIncompatibleModifications>false</breakBuildOnSourceIncompatibleModifications>
             <overrideCompatibilityChangeParameters>
               <overrideCompatibilityChangeParameter>
                 <compatibilityChange>METHOD_NOW_VARARGS</compatibilityChange>
