--- a/pinot-controller/pom.xml
+++ b/pinot-controller/pom.xml
@@ -122,6 +122,7 @@
             <configuration>
               <nodeVersion>v16.15.0</nodeVersion>
               <npmVersion>8.5.5</npmVersion>
+              <downloadRoot>/Users/nihjain/code/tmp_visa/pinot/binaries_for_build</downloadRoot>
             </configuration>
           </execution>
           <execution>
